@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX 0.91.0/singleclick-shadeormaxopts-0.9x.patch2 7788 RMD160 c448c6ac9269650b89dfcc87bcf3bbbf9fb20fd8 SHA1 6c97d5467f749ce8e183355e5ff0fe7606f95b23 SHA256 4cdf6629afeaec576864f6738ffa62497e63a429d2db69ea5db01dbde3894f49
 AUX 0.91.0/wlist-0.9x.patch 2980 RMD160 903fb1977228f651868515ca9719343b6f03ed4b SHA1 d29e5dc6c2f9fee2bc1200496fac6136ded21f53 SHA256 5f9ba4d49371e517834f9c8e1718cab943a682c43c573b1e6b6541bbf96b8a5d
 AUX 0.92.0/windowmaker-0.92.0-configure.patch 1003 RMD160 cd91114ae8d8a3e96ac04887ccdfcb128d7936b7 SHA1 66e9a3cacf1a5aed75ff8903a5536a1c8ace4639 SHA256 a71a4245be52013bb985b63508727fb19a379fbcbebfa89cdb00c02dbd796089
@@ -12,6 +15,13 @@ DIST WindowMaker-extra-0.1.tar.gz 238018 RMD160 94334c2c12d20a8fd0cd2a70e54cd368
 DIST windowmaker-0.92.0-patchset-1.tar.bz2 196673 RMD160 963b1941afd2b5038845e2d89fb2dffade9c17e0 SHA1 1f01455dae4de050953dd8b1a5039cdd798449e8 SHA256 0548af8e03a3696baf868966015400c9de5438e75dff4df7392ca58c61bf9365
 EBUILD windowmaker-0.92.0-r3.ebuild 5200 RMD160 bbd8a63807545a8fd7310500eb7c11fc70b641b4 SHA1 b59e43ae177b393c1702576b475508003de01ff4 SHA256 1b4617421f315e3100b563be78a6fba58c987c2fa8405678bc6eb1caaa555cde
 EBUILD windowmaker-0.92.0-r4.ebuild 3739 RMD160 e3c59b2492d915b138dd8e36d11a1407d4050425 SHA1 240b854094b24626c1b964bc0adeed738c2b171e SHA256 58a71596cd25488628c487b54c1d9c742d3783d0ea6fca01e22ffc251f068e79
-EBUILD windowmaker-0.92.0-r7.ebuild 5880 RMD160 0dbe35909c35b606fe53cd4b6a437c2ce8133277 SHA1 0115ae4629f63251a85efdc18a32238d4024b546 SHA256 3bf914650644710358c9785d302f1cc77d979299551a8c7aa666b80e432e8d01
-MISC ChangeLog 21362 RMD160 fc1c3794c4ba53b939c6bdc3d88821dd5340ac3c SHA1 ac31647c61ae8f6d72e73e623b6d471840816266 SHA256 ff288a8bc2fcf67a4a5e674b984750e747172074c84ba04baf7b47b26fcc0fbe
+EBUILD windowmaker-0.92.0-r7.ebuild 5768 RMD160 58e6cb1160764d0d576e0bc8d594cd8ccba23ebb SHA1 1a65525240715807215455da75fb80b5428da80d SHA256 499c5bb90b0b6f6ce53a60ce70bb30753e985178a6b58bbbf16189016ecf6868
+MISC ChangeLog 21515 RMD160 d2a1301613da35dd82a8a0a9895cec2c23c818e1 SHA1 bce1c28fcaf8f3119ba1fd33d02464abc070d51f SHA256 cf1f2d97f330a87efecc67c3b1c0ac05aa0e2916d33fbbf81108b74e74e31040
 MISC metadata.xml 160 RMD160 ddb4d678bca64884df87cfab19e00ed9b1ff68a7 SHA1 b3d2981594e6dc70e8f74882cb08b541e1031987 SHA256 264f651f5dc3c8c2d37605e94abe49e6b29b7aed9131e82b473f27e12d67ebe7
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.9 (GNU/Linux)
+
+iEYEARECAAYFAkhZTXMACgkQwnQyISwouHzrZQCeIFkw5BeM+FsNOKGX4Qq2bYsx
+0MMAn16ZU1k0AkjYO3DTmr8y6NS/h7TV
+=e3Gv
+-----END PGP SIGNATURE-----
